<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6A6A6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor1" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/valor2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/valor3" />

        <RadioButton
            android:id="@+id/radioButtonFeminino"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/valor4" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_valor" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor5"
        android:text="@string/valor5" />

    <Button
        android:id="@+id/buttonMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E8991"
        android:text="@string/valor6" />

    <Button
        android:id="@+id/buttonNovaPesquisa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor7" />

</LinearLayout>